--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@
             inteligentes.
           </p>
           <p>
-            Performance benchmarking can be run for every Interactive displayed in the
-            Interactive Browser.
+            Se puede ejecutar un testeo de desempeño para cada interactivo que se muestre en el navegador interactivo.
           </p>
-          <h2>Testing</h2>
+          <h2>Testeo</h2>
           <ul>
             <li>
               <a href='doc/interactives/sampler/index.html'>Ejemplos de interactivos</a>
