--- a/interactives.html
+++ b/interactives.html
@@ -3,7 +3,7 @@
   <head>
     <meta content='text/html;charset=utf-8' http-equiv='Content-Type'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-    <title>Lab Interactive Browser</title>
+    <title>Navegador de interactivos de Lab</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,400,400italic,700' rel='stylesheet' type='text/css'>
     <link href='vendor/codemirror/lib/codemirror.css' rel='stylesheet' type='text/css'>
     <link href='vendor/jquery-ui/jquery-ui.css' rel='stylesheet' type='text/css'>
@@ -37,7 +37,7 @@
       </a>
       <div class='row'>
         <h1><a href='index.html'>Lab</a>:
-        <a href=''>Interactive Browser</a></h1>
+        <a href=''>Navegador de interactivos</a></h1>
         <span class='title'>additional links:</span>
         <a class='opens-in-new-window' href='embeddable.html' id='embeddable-link' target='_blank'>Embeddable</a>
         <a class='opens-in-new-window' href='embeddable.html' id='datagames-link' target='_blank'>DataGames</a>
@@ -45,7 +45,7 @@
         <a class='opens-in-new-window' href='' id='original-import-link' target='_blank'>Original Imported Model</a>
       </div>
       <div class='row'>
-        <span class='title'>select Interactive:</span>
+        <span class='title'>elegir un Interactivo:</span>
         <select id='select-interactive'></select>
         <form class='controls' id='render-controls'>
           <span class='title'>render in:</span>
@@ -55,24 +55,24 @@
           </label>
           <span class='title'>size:</span>
           <select class='serialize' id='select-interactive-size' name='select-interactive-size'>
-            <option value='tiny'>tiny</option>
-            <option value='small'>small</option>
-            <option selected='selected' value='medium-small'>medium-small</option>
-            <option selected='selected' value='medium'>medium</option>
-            <option value='large'>large</option>
+            <option value='tiny'>diminuto</option>
+            <option value='small'>pequeño</option>
+            <option selected='selected' value='medium-small'>mediano-pequeño</option>
+            <option selected='selected' value='medium'>mediano</option>
+            <option value='large'>grande</option>
           </select>
         </form>
       </div>
       <div class='row'>
         <form id='interactive-controls'>
           <div class='controls' id='select-filters'>
-            <span class='title'>categories:</span>
+            <span class='title'>categorías:</span>
             <label for='curriculum-filter'>
               Curriculum
               <input checked='checked' class='serialize' id='curriculum-filter' name='curriculum-filter' type='checkbox'>
             </label>
             <label for='examples-filter'>
-              Examples
+              Ejemplos
               <input class='serialize' id='examples-filter' name='examples-filter' type='checkbox'>
             </label>
             <label for='tests-filter'>
@@ -85,15 +85,15 @@
             </label>
             <span class='title'>publication status:</span>
             <label for='public'>
-              Public
+              Públicos
               <input checked='checked' class='serialize' id='public' name='public' type='checkbox'>
             </label>
             <label for='draft'>
-              Draft*
+              Borrador*
               <input class='serialize' id='draft' name='draft' type='checkbox'>
             </label>
             <label for='broken'>
-              Broken**
+              Rotos**
               <input class='serialize' id='broken' name='broken' type='checkbox'>
             </label>
           </div>
@@ -124,13 +124,13 @@
         <li class='extras-item ui-state-default' id='editor'>
           <div class='extras-item-banner'>
             <input id='show-editor' type='checkbox'>
-            <label for='show-editor'>Interactive Editor</label>
+            <label for='show-editor'>Editor Interactivo</label>
           </div>
           <div class='extras-item-content' id='editor-content'>
             <div class='extras-item-controls'>
-              <button id='update-interactive-button'>Update Interactive</button>
-              <button id='update-json-from-interactive-button'>Update JSON from Interactive</button>
-              <a class='opens-in-new-window' href='' id='json-interactive-link' target='_blank'>Interactive JSON</a>
+              <button id='update-interactive-button'>Actualizar Interactivo</button>
+              <button id='update-json-from-interactive-button'>Actualizar JSON desde el Interactivo</button>
+              <a class='opens-in-new-window' href='' id='json-interactive-link' target='_blank'>Interactivo JSON</a>
               <input id='edit-mode' type='checkbox'>
               <label for='edit-mode'>Edit Mode</label>
               <button class='right' id='autoformat-interactive-json-button'>AutoFormat</button>
@@ -141,15 +141,15 @@
         <li class='extras-item ui-state-default' id='model-editor'>
           <div class='extras-item-banner'>
             <input id='show-model-editor' type='checkbox'>
-            <label for='show-model-editor'>Model Editor</label>
+            <label for='show-model-editor'>Editor del Modelo</label>
           </div>
           <div class='extras-item-content' id='model-editor-content'>
             <div class='extras-item-controls'>
-              <button id='update-model-button'>Update Model</button>
-              <button id='update-json-from-model-button'>Update JSON from Model</button>
+              <button id='update-model-button'>Actualizar Modelo</button>
+              <button id='update-json-from-model-button'>Actualizar JSON del modelo</button>
               <a class='opens-in-new-window' href='' id='json-model-link' target='_blank'>Model JSON</a>
-              <a class='opens-in-new-window' href='' id='original-model-link' target='_blank'>Original Model</a>
-              <button class='right' id='autoformat-model-json-button'>AutoFormat</button>
+              <a class='opens-in-new-window' href='' id='original-model-link' target='_blank'>Modelo Original</a>
+              <button class='right' id='autoformat-model-json-button'>AutoFormato</button>
             </div>
             <textarea id='model-text-area'></textarea>
           </div>
