--- a/interactives.html
+++ b/interactives.html
@@ -38,22 +38,22 @@
       <div class='row'>
         <h1><a href='index.html'>Lab</a>:
         <a href=''>Navegador de interactivos</a></h1>
-        <span class='title'>additional links:</span>
-        <a class='opens-in-new-window' href='embeddable.html' id='embeddable-link' target='_blank'>Embeddable</a>
+        <span class='title'>enlaces adicionales:</span>
+        <a class='opens-in-new-window' href='embeddable.html' id='embeddable-link' target='_blank'>Embebible</a>
         <a class='opens-in-new-window' href='embeddable.html' id='datagames-link' target='_blank'>DataGames</a>
         <a class='opens-in-new-window' href='embeddable.html' id='datagames-staging-link' target='_blank'>DataGames (Staging)</a>
-        <a class='opens-in-new-window' href='' id='original-import-link' target='_blank'>Original Imported Model</a>
+        <a class='opens-in-new-window' href='' id='original-import-link' target='_blank'>Modelo original importado</a>
       </div>
       <div class='row'>
         <span class='title'>elegir un Interactivo:</span>
         <select id='select-interactive'></select>
         <form class='controls' id='render-controls'>
-          <span class='title'>render in:</span>
+          <span class='title'>renderizar en:</span>
           <label for='render-in-iframe'>
             iframe
             <input checked='checked' class='serialize' id='render-in-iframe' name='render-in-iframe' type='checkbox'>
           </label>
-          <span class='title'>size:</span>
+          <span class='title'>tamaño:</span>
           <select class='serialize' id='select-interactive-size' name='select-interactive-size'>
             <option value='tiny'>diminuto</option>
             <option value='small'>pequeño</option>
@@ -68,7 +68,7 @@
           <div class='controls' id='select-filters'>
             <span class='title'>categorías:</span>
             <label for='curriculum-filter'>
-              Curriculum
+              Curriculares
               <input checked='checked' class='serialize' id='curriculum-filter' name='curriculum-filter' type='checkbox'>
             </label>
             <label for='examples-filter'>
@@ -83,9 +83,9 @@
               Benchmarks
               <input class='serialize' id='benchmarks-filter' name='benchmarks-filter' type='checkbox'>
             </label>
-            <span class='title'>publication status:</span>
+            <span class='title'>estado de publicación:</span>
             <label for='public'>
-              Públicos
+              Público
               <input checked='checked' class='serialize' id='public' name='public' type='checkbox'>
             </label>
             <label for='draft'>
@@ -93,7 +93,7 @@
               <input class='serialize' id='draft' name='draft' type='checkbox'>
             </label>
             <label for='broken'>
-              Rotos**
+              Roto**
               <input class='serialize' id='broken' name='broken' type='checkbox'>
             </label>
           </div>
@@ -102,8 +102,8 @@
     </div>
     <div id='interactive-header'>
       <div id='interactive-forward-back'>
-        <span class='arrow' id='previous-interactive'>previous</span>
-        <span class='arrow' id='next-interactive'>next</span>
+        <span class='arrow' id='previous-interactive'>anterior</span>
+        <span class='arrow' id='next-interactive'>siguiente</span>
       </div>
       <div id='interactive-title'></div>
     </div>
