--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       <a href='http://www.concord.org/' id='logo'>
         <img src='resources/layout/cc-logo.png'>
       </a>
-      <h1><a href='index.html'>Lab</a>: HTML5-based scientific models, visualizations, graphing, and probeware</h1>
+      <h1><a href='index.html'>Lab</a>: Modelos científicos, visualizaciones, gráficas y sensores basados en HTML5</h1>
     </div>
     <div id='under-header-links'>
-      <a href='readme.html'>Read Me</a>
+      <a href='readme.html'>Leeme</a>
       &nbsp;&nbsp;
-      <a href='license.html'>License</a>
+      <a href='license.html'>Licencia</a>
       &nbsp;&nbsp;
-      <a href='https://github.com/concord-consortium/lab'>Github Repository</a>
+      <a href='https://github.com/concord-consortium/lab'>Repositorio Github</a>
       &nbsp;&nbsp;
-      <a href='https://github.com/concord-consortium/lab/issues'>Github Issues</a>
+      <a href='https://github.com/concord-consortium/lab/issues'>Aspectos de Github</a>
       &nbsp;&nbsp;
       <a href='https://www.pivotaltracker.com/projects/442903'>Pivotal Tracker Project</a>
       &nbsp;&nbsp;
@@ -36,7 +36,7 @@
       &nbsp;&nbsp;
       <a href='https://travis-ci.org/concord-consortium/lab'>CIS (travis-ci)</a>
       &nbsp;&nbsp;
-      <a href='browser-check.html'>Browser Check</a>
+      <a href='browser-check.html'>Chequear navegador</a>
     </div>
     <div id='content'>
       <div class='column1'>
