--- a/interactives.html
+++ b/interactives.html
@@ -39,13 +39,13 @@
         <h1><a href='index.html'>Lab</a>:
         <a href=''>Navegador de interactivos</a></h1>
         <span class='title'>enlaces adicionales:</span>
-        <a class='opens-in-new-window' href='embeddable.html' id='embeddable-link' target='_blank'>Embebible</a>
+        <a class='opens-in-new-window' href='embeddable.html' id='embeddable-link' target='_blank'>Incrustable</a>
         <a class='opens-in-new-window' href='embeddable.html' id='datagames-link' target='_blank'>DataGames</a>
         <a class='opens-in-new-window' href='embeddable.html' id='datagames-staging-link' target='_blank'>DataGames (Staging)</a>
         <a class='opens-in-new-window' href='' id='original-import-link' target='_blank'>Modelo original importado</a>
       </div>
       <div class='row'>
-        <span class='title'>elegir un Interactivo:</span>
+        <span class='title'>seleccionar un interactivo:</span>
         <select id='select-interactive'></select>
         <form class='controls' id='render-controls'>
           <span class='title'>renderizar en:</span>
